# KiCAD_Symbols_Generator

./: .gitignore  .picture_metadata.txt  Pipfile  README.md  app.py  compare_part_numbers.py  extract_we_xhmi_parts.py  picture_names.txt  pyproject.toml  requirements.txt  ruff.toml
.qwen/: settings.json
3D_models/: 026x026x0236.step  05-08-1695_ADI.step  1042P.step  1043.step  21-0041B_8_MXM.step  21-0041_S161_MXM.step  21-0056C_20_MXM.step  21-0057F_MXM.step  21-0087_C1441C_MXM.step  21-0144H_T4877-6.step  21-0168_T822-3C_ADI.step  21-0664_TD12331C_MXM.step  21-100290B_T2444Y&plus_4C_MXM.step  21-100385B_90-100128_MXM.step  2907525__UM108_Profil.step  742792731.step  9774005243R.step  9774010243R.step  9774015243R.step  9774020243R.step  9774025243R.step  9774030243R.step  9774035243R.step  9774040243R.step  9774045243R.step  9774050243R.step  9774060243R.step  9774070243R.step  9774080243R.step  BBS-101-G-A.step  BBS-102-G-A.step  BBS-103-G-A.step  BBS-104-G-A.step  BBS-105-G-A.step  BBS-106-G-A.step  BBS-107-G-A.step  BBS-108-G-A.step  BBS-109-G-A.step  BBS-110-G-A.step  BBS-111-G-A.step  (+913 more)
app/: .dockerignore  .picture_metadata.txt  Dockerfile  app.py  cap_esr_pairs.csv  pictures.txt  requirements.txt
data/: 1043_part_numbers.csv  35SVPK330M_part_numbers.csv  50SVPK10M_part_numbers.csv  50SVPK120M_part_numbers.csv  50SVPK22M_part_numbers.csv  50SVPK68M_part_numbers.csv  50SVPK_part_numbers.csv  742792731_part_numbers.csv  750315836_part_numbers.csv  885012208119_part_numbers.csv  A768KE336M1HLAE042_part_numbers.csv  AA0805FR-07_part_numbers.csv  (+183 more)
(+3642 files in other folders)
