[project]
name = "kicad-symbols-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-ag-grid>=32.3.1",
    "dash-bootstrap-components>=2.0.3",
    "dash-bootstrap-templates>=2.1.0",
    "gunicorn>=23.0.0",
    "pandas>=2.3.1",
]
