[project]
name = "kicad-symbols-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "dash>=3.2.0",
    "dash-ag-grid>=32.3.1",
    "dash-bootstrap-components>=2.0.3",
    "dash-bootstrap-templates>=2.1.0",
    "gunicorn>=23.0.0",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
ignore = []
fixable = ["I001"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
